# monitor-dimmer

arduino/: .editorconfig
arduino/src/: main.cpp
rust/: .editorconfig  Cargo.toml  Makefile  monitor-dimmer.service
rust/src/: display.rs  main.rs  protocol.rs
