[package]
name = "monitor-dimmer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ddc = "0.2.2"
ddc-hi = "0.4.1"
ddc-i2c = { version = "0.2.2", features = ["with-linux"]}
serialport = {version = "4.0.1", default-features = false}
regex = "1.5.4"
